frontend/tests/cases/negative/simple/wild2.gr
foo : Int → Int
foo 0 = 1;
foo _ = 0
